added Simon's refs

--- a/_bibliography/ds.bib
+++ b/_bibliography/ds.bib
@@ -1,3 +1,292 @@
+@article{RN301,
+   author = {Magin, Simon. and Saha, J. and Wang, M. and Mladenova, V. and Coym, N. and Iliakis, G.},
+   title = {Lipofection and nucleofection of substrate plasmid can generate widely different readings of DNA end-joining efficiency in different cell lines},
+   journal = {DNA repair},
+   volume = {12},
+   number = {2},
+   pages = {148-60},
+   note = {Magin, Simon
+Saha, Janapriya
+Wang, Minli
+Mladenova, Veronika
+Coym, Nadine
+Iliakis, George
+Netherlands
+DNA Repair (Amst). 2013 Feb 1;12(2):148-60. doi: 10.1016/j.dnarep.2012.11.008. Epub 2013 Jan 1.},
+   abstract = {In vivo plasmid end-joining assays are valuable tools for dissecting important qualitative and quantitative aspects of non-homologous end-joining (NHEJ)--a key mechanism for the repair of DNA double-strand breaks (DSBs) in higher eukaryotes. They enable the use of defined DNA ends as substrates for end-joining and the analysis by sequencing of the resulting junctions to identify the repair pathways engaged. Yet, plasmid assays have generated divergent results of end-joining capacity in the same DSB repair mutants when used under different conditions, which implies contributions from undefined and therefore uncontrolled parameters. To help standardize these assays, we searched for parameters underpinning these variations and identified transfection method as an important determinant. Here, we compare a lipid-based transfection method, lipofection, with an electroporation method, nucleofection, and find large, unanticipated and cell line-dependent differences in percent end-joining without recognizable trends. For example, in rodent cells, transfection using lipofection gives nearly WT end-joining in DNA-PKcs mutants and only mildly inhibited end-joining in Lig4 and Ku mutants. In contrast, transfection using nucleofection shows marked end-joining inhibition in all NHEJ mutants tested as compared to the WT. In human HCT116 cells, end-joining after nucleofection is strongly suppressed even in the WT and the differences to the mutants are small. After lipofection, in contrast, end-joining is high in WT cells and markedly suppressed in the mutants. We conclude that better understanding and control of the physicochemical/biological and analytical parameters underpinning these differences will be required to generate with plasmid assays results with quantitative power comparable to that of well-established methods of DSB analysis such as pulsed-field gel electrophoresis or gamma-H2AX foci scoring. Until then, caution is needed in the interpretation of the results obtained - particularly with reference to pathway efficiency and residual damage - and confirmation of critical results with alternative transfection approaches is advisable.},
+   ISSN = {1568-7856 (Electronic)
+1568-7856 (Linking)},
+   DOI = {10.1016/j.dnarep.2012.11.008},
+   url = {http://www.ncbi.nlm.nih.gov/pubmed/23286905},
+   year = {2013},
+   type = {Journal Article}
+}
+
+@article{RN318,
+   author = {Mladenov, E. and Magin, Simon. and Soni, A. and Iliakis, G.},
+   title = {DNA double-strand break repair as determinant of cellular radiosensitivity to killing and target in radiation therapy},
+   journal = {Frontiers in oncology},
+   volume = {3},
+   pages = {113},
+   note = {Mladenov, Emil
+Magin, Simon
+Soni, Aashish
+Iliakis, George
+Switzerland
+Front Oncol. 2013 May 10;3:113. doi: 10.3389/fonc.2013.00113. Print 2013.},
+   abstract = {Radiation therapy plays an important role in the management of a wide range of cancers. Besides innovations in the physical application of radiation dose, radiation therapy is likely to benefit from novel approaches exploiting differences in radiation response between normal and tumor cells. While ionizing radiation induces a variety of DNA lesions, including base damages and single-strand breaks, the DNA double-strand break (DSB) is widely considered as the lesion responsible not only for the aimed cell killing of tumor cells, but also for the general genomic instability that leads to the development of secondary cancers among normal cells. Homologous recombination repair (HRR), non-homologous end-joining (NHEJ), and alternative NHEJ, operating as a backup, are the major pathways utilized by cells for the processing of DSBs. Therefore, their function represents a major mechanism of radiation resistance in tumor cells. HRR is also required to overcome replication stress - a potent contributor to genomic instability that fuels cancer development. HRR and alternative NHEJ show strong cell-cycle dependency and are likely to benefit from radiation therapy mediated redistribution of tumor cells throughout the cell-cycle. Moreover, the synthetic lethality phenotype documented between HRR deficiency and PARP inhibition has opened new avenues for targeted therapies. These observations make HRR a particularly intriguing target for treatments aiming to improve the efficacy of radiation therapy. Here, we briefly describe the major pathways of DSB repair and review their possible contribution to cancer cell radioresistance. Finally, we discuss promising alternatives for targeting DSB repair to improve radiation therapy and cancer treatment.},
+   ISSN = {2234-943X (Electronic)
+2234-943X (Linking)},
+   DOI = {10.3389/fonc.2013.00113},
+   url = {http://www.ncbi.nlm.nih.gov/pubmed/23675572},
+   year = {2013},
+   type = {Journal Article}
+}
+
+@article{RN594,
+   author = {Costantino, L. and Sotiriou, S. K. and Rantala, J. K. and Magin, Simon. and Mladenov, E. and Helleday, T. and Haber, J. E. and Iliakis, G. and Kallioniemi, O. P. and Halazonetis, T. D.},
+   title = {Break-Induced Replication Repair of Damaged Forks Induces Genomic Duplications in Human Cells},
+   journal = {Science},
+   volume = {343},
+   number = {6166},
+   pages = {88-91},
+   note = {282HR
+Times Cited:0
+Cited References Count:29},
+   abstract = {In budding yeast, one-ended DNA double-strand breaks (DSBs) and damaged replication forks are repaired by break-induced replication (BIR), a homologous recombination pathway that requires the Pol32 subunit of DNA polymerase delta. DNA replication stress is prevalent in cancer, but BIR has not been characterized in mammals. In a cyclin E overexpression model of DNA replication stress, POLD3, the human ortholog of POL32, was required for cell cycle progression and processive DNA synthesis. Segmental genomic duplications induced by cyclin E overexpression were also dependent on POLD3, as were BIR-mediated recombination events captured with a specialized DSB repair assay. We propose that BIR repairs damaged replication forks in mammals, accounting for the high frequency of genomic duplications in human cancers.},
+   keywords = {oncogene-induced senescence
+DNA-polymerase delta
+cancer development
+instability
+stability
+complex
+yeast},
+   ISSN = {0036-8075},
+   DOI = {DOI 10.1126/science.1243211},
+   url = {<Go to ISI>://WOS:000329162000054},
+   year = {2014},
+   type = {Journal Article}
+}
+
+@article{RN1738,
+   author = {Magin, Simon. and Papaioannou, M. and Saha, J. and Staudt, C. and Iliakis, G.},
+   title = {Inhibition of Homologous Recombination and Promotion of Mutagenic Repair of DNA Double-Strand Breaks Underpins Arabinoside-Nucleoside Analogue Radiosensitization},
+   journal = {Mol Cancer Ther},
+   volume = {14},
+   number = {6},
+   pages = {1424-33},
+   note = {Magin, Simon
+Papaioannou, Maria
+Saha, Janapriya
+Staudt, Christian
+Iliakis, George
+eng
+Research Support, Non-U.S. Gov't
+2015/04/05
+Mol Cancer Ther. 2015 Jun;14(6):1424-33. doi: 10.1158/1535-7163.MCT-14-0682. Epub 2015 Apr 3.},
+   abstract = {In concurrent chemoradiotherapy, drugs are used to sensitize tumors to ionizing radiation. Although a spectrum of indications for simultaneous treatment with drugs and radiation has been defined, the molecular mechanisms underpinning tumor radiosensitization remain incompletely characterized for several such combinations. Here, we investigate the mechanisms of radiosensitization by the arabinoside nucleoside analogue 9-beta-D-arabinofuranosyladenine (araA) placing particular emphasis on the repair of DNA double-strand breaks (DSB), and compare the results to those obtained with fludarabine (F-araA) and cytarabine (araC). Postirradiation treatment with araA strongly sensitizes cells to ionizing radiation, but leaves unchanged DSB repair by NHEJ in logarithmically growing cells, in sorted G1 or G2 phase populations, as well as in cells in the plateau phase of growth. Notably, araA strongly inhibits DSB repair by homologous recombination (HRR), as assessed by scoring ionizing radiation-induced RAD51 foci, and in functional assays using integrated reporter constructs. Cells compromised in HRR by RNAi-mediated transient knockdown of RAD51 show markedly reduced radiosensitization after treatment with araA. Remarkably, mutagenic DSB repair compensates for HRR inhibition in araA-treated cells. Compared with araA, F-araA and araC are only modestly radiosensitizing under the conditions examined. We propose that the radiosensitizing potential of nucleoside analogues is linked to their ability to inhibit HRR and concomitantly promote the error-prone processing of DSBs. Our observations pave the way to treatment strategies harnessing the selective inhibitory potential of nucleoside analogues and the development of novel compounds specifically utilizing HRR inhibition as a means of tumor cell radiosensitization.},
+   keywords = {Blotting, Western
+Cell Line, Tumor
+Cell Proliferation/drug effects/radiation effects
+Cytarabine/*pharmacology
+DNA Breaks, Double-Stranded/*drug effects/radiation effects
+DNA Repair/*drug effects/radiation effects
+Dose-Response Relationship, Drug
+Dose-Response Relationship, Radiation
+Green Fluorescent Proteins/genetics/metabolism
+Homologous Recombination/*drug effects/radiation effects
+Humans
+Microscopy, Confocal
+RNA Interference
+Rad51 Recombinase/genetics/metabolism
+Radiation-Sensitizing Agents/pharmacology
+Vidarabine/*analogs & derivatives/*pharmacology
+X-Rays},
+   ISSN = {1538-8514 (Electronic)
+1535-7163 (Linking)},
+   DOI = {10.1158/1535-7163.MCT-14-0682},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/25840584},
+   year = {2015},
+   type = {Journal Article}
+}
+
+@article{RN1739,
+   author = {Mladenov, E. and Magin, S. and Soni, A. and Iliakis, G.},
+   title = {DNA double-strand-break repair in higher eukaryotes and its role in genomic instability and cancer: Cell cycle and proliferation-dependent regulation},
+   journal = {Semin Cancer Biol},
+   volume = {37-38},
+   pages = {51-64},
+   note = {Mladenov, Emil
+Magin, Simon
+Soni, Aashish
+Iliakis, George
+eng
+Review
+Research Support, Non-U.S. Gov't
+England
+2016/03/27
+Semin Cancer Biol. 2016 Jun;37-38:51-64. doi: 10.1016/j.semcancer.2016.03.003. Epub 2016 Mar 22.},
+   abstract = {Eukaryotic cells respond to DNA damage by activating a comprehensive network of biochemical pathways that enable damage recognition and initiate responses leading to repair, apoptosis/autophagy or senescence. This network of responses is commonly described as the "DNA damage response" (DDR). Among the plethora of lesions generated in the DNA from various physical and chemical agents in the environment and in the cell, DNA double strand breaks (DSBs) and DNA replication stress (RS) are the most severe and induce strong DDR, as they bear high risk for cell death, or genomic alterations ultimately causing cancer. Here, we focus on DSBs and provide a state-of-the-art review of the molecular underpinnings of repair pathways that process DSBs in higher eukaryotes, their strengths and limitations, as well as aspects of repair pathway choice and hierarchy. Furthermore, we discuss the regulation of DSB repair pathways throughout the cell cycle and by processes affecting the proliferative state of the cell. We review the role of growth factors and their receptors in the regulation of each DSB repair pathway and discuss aspects of systemic regulation of DNA repair.},
+   keywords = {Cell Cycle/genetics
+Cell Proliferation/genetics
+*DNA Breaks, Double-Stranded
+*DNA Repair
+*Genomic Instability
+Humans
+Neoplasms/*genetics/immunology/*pathology
+Recombinational DNA Repair
+*Cell cycle regulation
+*Cell growth regulation
+*DNA end resection
+*Double strand break repair
+*hrr
+*Pathway choice
+*ssa
+*alt-EJ
+*c-NHEJ},
+   ISSN = {1096-3650 (Electronic)
+1044-579X (Linking)},
+   DOI = {10.1016/j.semcancer.2016.03.003},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/27016036},
+   year = {2016},
+   type = {Journal Article}
+}
+
+@article{RN1740,
+   author = {Soni, A. and Murmann-Konda, T. and Magin, S. and Iliakis, G.},
+   title = {A method for the cell-cycle-specific analysis of radiation-induced chromosome aberrations and breaks},
+   journal = {Mutat Res},
+   volume = {815},
+   pages = {10-19},
+   note = {Soni, Aashish
+Murmann-Konda, Tamara
+Magin, Simon
+Iliakis, George
+eng
+Research Support, Non-U.S. Gov't
+Netherlands
+2019/04/19
+Mutat Res. 2019 May;815:10-19. doi: 10.1016/j.mrfmmm.2019.04.001. Epub 2019 Apr 6.},
+   abstract = {The classical G2-assay is widely used to assess cell-radiosensitivity and cancer phenotype: Cells are exposed to low doses of ionizing-radiation (IR) and collected for cytogenetic- analysis 1.5 h later. In this way, chromosome-damage is measured in cells irradiated in G2-phase, without retrieving information regarding kinetics of chromosome-break-repair. Modification of the assay to include analysis at multiple time-points after IR, has enabled kinetic-analysis of chromatid-break-repair and assessment of damage in a larger proportion of G2-phase cells. This modification, however, increases the probability that at later time points not only cells irradiated in G2-phase, but also cells irradiated in S-phase will reach metaphase. However, the response of cells irradiated in G2-phase can be mechanistically different from that of cells irradiated in S-phase. Therefore, indiscriminate analysis may confound the interpretation of experiments designed to elucidate mechanisms of chromosome-break-repair and the contributions of the different DSB-repair-pathways in this response. Here we report an EdU based modification of the assay that enables S- and G2-phase specific analysis of chromatid break repair. Our results show that the majority of metaphases captured during the first 2 h after IR originate from cells irradiated in G2-phase (EdU(-) metaphases) in both rodent and human cells. Metaphases originating from cells irradiated in S-phase (EdU(+) metaphases) start appearing at 2 h and 4 h after IR in rodent and human cells, respectively. The kinetics of chromatid-break-repair are similar in cells irradiated in G2- and S-phase of the cell-cycle, both in rodent and human cells. The protocol is applicable to classical-cytogenetic experiments and allows the cell-cycle specific analysis of chromosomal-aberrations. Finally, the protocol can be applied to the kinetic analysis of chromosome-breaks in prematurely-condensed-chromosomes of G2-phase cells. In summary, the developed protocol provides means to enhance the analysis of IR-induced-cytogenetic-damage by providing information on the cell-cycle phase where DNA damage is inflicted.},
+   keywords = {Animals
+CHO Cells
+Cell Line
+Cell Line, Tumor
+Chromosome Aberrations/*radiation effects
+Chromosome Breakage/drug effects
+Chromosomes/*genetics/radiation effects
+Cricetulus
+DNA Repair/genetics/radiation effects
+G2 Phase/genetics/radiation effects
+HCT116 Cells
+Humans
+Kinetics
+Metaphase/*genetics/*radiation effects
+Radiation, Ionizing
+S Phase/genetics/radiation effects
+*Cell cycle
+*Chromosomal aberrations
+*DNA double strand breaks repair
+*EdU-ClickIT(R)
+*G(2) radiosensitivity assay},
+   ISSN = {1873-135X (Electronic)
+0027-5107 (Linking)},
+   DOI = {10.1016/j.mrfmmm.2019.04.001},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/30999232},
+   year = {2019},
+   type = {Journal Article}
+}
+
+@article{RN1741,
+   author = {Magin, S. and Georgoulis, A. and Papadimitriou, K. and Iliakis, G. and Vorgias, C. E.},
+   title = {Complete Genome Sequence of the Deep-Sea Bacterium Moritella marina MP-1 (ATCC 15381)},
+   journal = {Microbiol Resour Announc},
+   volume = {9},
+   number = {4},
+   note = {Magin, Simon
+Georgoulis, Anastasios
+Papadimitriou, Konstantinos
+Iliakis, George
+Vorgias, Constantinos E
+eng
+2020/01/25
+Microbiol Resour Announc. 2020 Jan 23;9(4). pii: 9/4/e01321-19. doi: 10.1128/MRA.01321-19.},
+   abstract = {Here, the complete assembly of the Moritella marina MP-1 (ATCC 15381) genome, combining Illumina and long Nanopore reads, is presented. The gapless assembly consists of a 4.7-Mb circular chromosome and a 26-kb plasmid, with a G+C content of 40.7%, and will assist in further studies of the molecular pathways in this biotechnologically significant organism.},
+   ISSN = {2576-098X (Electronic)
+2576-098X (Linking)},
+   DOI = {10.1128/MRA.01321-19},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/31974151},
+   year = {2020},
+   type = {Journal Article}
+}
+
+@article{RN1742,
+   author = {Magin, S. and Meher, P. K. and Iliakis, G.},
+   title = {Nucleoside Analogs Radiosensitize G0 Cells by Activating DNA End Resection and Alternative End-Joining},
+   journal = {Radiat Res},
+   volume = {195},
+   number = {5},
+   pages = {412-426},
+   note = {Magin, Simon
+Meher, Prabodha Kumar
+Iliakis, George
+eng
+Research Support, Non-U.S. Gov't
+2021/03/24
+Radiat Res. 2021 May 1;195(5):412-426. doi: 10.1667/RADE-20-00195.1.},
+   abstract = {Alternative end-joining (alt-EJ) is a DNA end resection-dependent, error-prone pathway utilized by vertebrate cells to repair DNA double-strand breaks (DSBs), but its engagement is linked to chromosomal translocations and genomic instability. Here, we report that when proliferating cells are exposed to ionizing radiation, treatment with nucleoside analogs (NAs) causes strong radiosensitization by increasing engagement of alt-EJ, while at the same time suppressing homologous recombination (HR) in S- and G2phase cells. This NA-mediated pathway shift may reflect a passive compensatory engagement of alt-EJ following HR suppression that is specific for S- and G2-phase cells, and/or the direct activation of alt-EJ throughout the cell cycle. To distinguish between these possibilities, we utilize here a cell culture model that exploits genetic and cell cycle-dependent inactivation of DSB repair pathways, to exclusively study alt-EJ and its modulation by NAs in murine and human cell lines. To this end, we allow LIG4-/--deficient cells to accumulate in G1/G0 phase by transfer to serum-deprived media and obtain cells deficient in c-NHEJ owing to the genetic LIG4 knockout, deficient in HR owing to the absence of S- or G2-phase cells, and compromised in their ability to carry out alt-EJ owing to their accumulation in G0. We find that in these cells irradiation and treatment with the NA, beta-arabinofuranosyladenine (araA), and to a lesser degree with other NAs, promptly activates suppressed alt-EJ that now functions at levels approximating those of c-NHEJ in wild-type cells. Results at high dose (20 Gy) generated using pulsed-field gel electrophoresis (PFGE) are corroborated by results at low dose (1 Gy) generated by scoring 53BP1 foci. Strikingly, araA treatment activates a normally undetectable DNA-end-resection at DSBs, which requires ATR activity, but proceeds unimpeded after CtIP knockdown. Treatment with araA increases the formation of chromosomal aberrations and enhances radiation-induced cell killing. The results support direct stimulation of resection by NAs and alt-EJ as a mechanism of their documented radiosensitizing potential. We propose that this stimulation also occurs in repair-proficient cells and that it occurs throughout the cell cycle. It may therefore be harnessed to develop protocols combining NAs with radiation to treat human cancer.},
+   keywords = {Animals
+Cell Line
+Cell Proliferation/drug effects/genetics/radiation effects
+DNA Breaks, Double-Stranded/drug effects/radiation effects
+DNA End-Joining Repair/*drug effects/radiation effects
+Dose-Response Relationship, Radiation
+Humans
+Mice
+Nucleosides/*analogs & derivatives/*pharmacology
+Radiation-Sensitizing Agents/*chemistry/*pharmacology
+Resting Phase, Cell Cycle/drug effects/*genetics/radiation effects
+Tumor Suppressor p53-Binding Protein 1/metabolism},
+   ISSN = {1938-5404 (Electronic)
+0033-7587 (Linking)},
+   DOI = {10.1667/RADE-20-00195.1},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/33755161},
+   year = {2021},
+   type = {Journal Article}
+}
+
+@article{RN1743,
+   author = {Tuns, A. I. and Hartmann, T. and Magin, S. and Gonzalez, R. C. and Henssen, A. G. and Rahmann, S. and Schramm, A. and Koster, J.},
+   title = {Detection and Validation of Circular DNA Fragments Using Nanopore Sequencing},
+   journal = {Front Genet},
+   volume = {13},
+   pages = {867018},
+   note = {Tuns, Alicia Isabell
+Hartmann, Till
+Magin, Simon
+Gonzalez, Rocio Chamorro
+Henssen, Anton George
+Rahmann, Sven
+Schramm, Alexander
+Koster, Johannes
+eng
+Switzerland
+2022/06/18
+Front Genet. 2022 May 30;13:867018. doi: 10.3389/fgene.2022.867018. eCollection 2022.},
+   abstract = {Occurrence of extra-chromosomal circular DNA is a phenomenon frequently observed in tumor cells, and the presence of such DNA has been recognized as a marker of adverse outcome across cancer types. We here describe a computational workflow for identification of DNA circles from long-read sequencing data. The workflow is implemented based on the Snakemake workflow management system. Its key step uses a graph-theoretic approach to identify putative circular fragments validated on simulated reads. We then demonstrate robustness of our approach using nanopore sequencing of selectively enriched circular DNA by highly sensitive and specific recovery of plasmids and the mitochondrial genome, which is the only circular DNA in normal human cells. Finally, we show that the workflow facilitates detection of larger circular DNA fragments containing extrachromosomal copies of the MYCN oncogene and the respective breakpoints, which is a potentially useful application in disease monitoring of several cancer types.},
+   keywords = {algorithm
+cancer
+circular DNA
+nanopore sequencing
+snakemake},
+   ISSN = {1664-8021 (Print)
+1664-8021 (Linking)},
+   DOI = {10.3389/fgene.2022.867018},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/35711922},
+   year = {2022},
+   type = {Journal Article}
+}
+
 @article{Kraiselburd2012ALP,
   title={A LOV Protein Modulates the Physiological Attributes of Xanthomonas axonopodis pv. citri Relevant for Host Plant Colonization},
   author={Ivana Kraiselburd and Anal{\'i}a I. Alet and Mar{\'i}a Laura Tondo and Silvana Petrocelli and Lucas Dami{\'a}n Daurelio and Jesica Monz{\'o}n and Oscar Adolfo Ruiz and Aba Losi and Elena G Orellano},
