--- a/_bibliography/mcmi.bib
+++ b/_bibliography/mcmi.bib
@@ -1,3 +1,47 @@
+@InProceedings{Zerhoudi2022_cikm_simiir20-framework,
+  author    = {Saber Zerhoudi and Sebastian G{\"u}nther and Kim Plassmeier and Timo Borst and Christin Seifert and Matthias Hagen and Michael Granitzer},
+  booktitle = {31st ACM International Conference on Information and Knowledge Management (CIKM 2022)},
+  title     = {{The SimIIR 2.0 Framework: User Types, Markov Model-Based Interaction Simulation, and Advanced Query Generation}},
+  year      = {2022},
+  publisher = {ACM},
+  site      = {Atlanta, Georgia, USA},
+}
+
+@Misc{Haller2022_preprints_short-answare-grading-survey,
+  author    = {Haller, Stefan and Aldea, Adina and Seifert, Christin and Strisciuglio, Nicola},
+  title     = {Survey on Automated Short Answer Grading with Deep Learning: from Word Embeddings to Transformers},
+  year      = {2022},
+  copyright = {Creative Commons Attribution 4.0 International},
+  doi       = {10.48550/ARXIV.2204.03503},
+  keywords  = {Computation and Language (cs.CL), Artificial Intelligence (cs.AI), Machine Learning (cs.LG), FOS: Computer and information sciences},
+  publisher = {arXiv},
+  url       = {https://arxiv.org/abs/2204.03503},
+}
+
+
+@Misc{Nguyen2022_preprints_conversational-xai,
+  author    = {Nguyen, Van Bach and Schlötterer, Jörg and Seifert, Christin},
+  title     = {Explaining Machine Learning Models in Natural Conversations: Towards a Conversational XAI Agent},
+  year      = {2022},
+  copyright = {Creative Commons Attribution Non Commercial No Derivatives 4.0 International},
+  doi       = {10.48550/ARXIV.2209.02552},
+  keywords  = {Artificial Intelligence (cs.AI), Computation and Language (cs.CL), FOS: Computer and information sciences},
+  publisher = {arXiv},
+  url       = {https://arxiv.org/abs/2209.02552},
+}
+
+
+@Misc{Nauta2022_preprints_evaluating-xai,
+  author    = {Nauta, Meike and Trienes, Jan and Pathak, Shreyasi and Nguyen, Elisa and Peters, Michelle and Schmitt, Yasmin and Schlötterer, Jörg and van Keulen, Maurice and Seifert, Christin},
+  title     = {From Anecdotal Evidence to Quantitative Evaluation Methods: A Systematic Review on Evaluating Explainable AI},
+  year      = {2022},
+  copyright = {arXiv.org perpetual, non-exclusive license},
+  doi       = {10.48550/ARXIV.2201.08164},
+  keywords  = {Artificial Intelligence (cs.AI), FOS: Computer and information sciences},
+  publisher = {arXiv},
+  url       = {https://arxiv.org/abs/2201.08164},
+}
+
 
 @article{keulenScalableInterdisciplinaryData2020,
   title = {Scalable {{Interdisciplinary Data Science Teaching}} at the {{University}} of {{Twente}}},
