--- a/_bibliography/mcmi.bib
+++ b/_bibliography/mcmi.bib
@@ -1,39 +1,27 @@
-
-@Misc{Haller2022_preprints_short-answare-grading-survey,
-  author    = {Haller, Stefan and Aldea, Adina and Seifert, Christin and Strisciuglio, Nicola},
-  title     = {Survey on Automated Short Answer Grading with Deep Learning: from Word Embeddings to Transformers},
-  year      = {2022},
+@misc{Haller2022_preprints_short-answare-grading-survey,
+  title = {Survey on Automated Short Answer Grading with Deep Learning: From Word Embeddings to Transformers},
+  author = {Haller, Stefan and Aldea, Adina and Seifert, Christin and Strisciuglio, Nicola},
+  year = {2022},
+  publisher = {{arXiv}},
+  doi = {10.48550/ARXIV.2204.03503},
   copyright = {Creative Commons Attribution 4.0 International},
-  doi       = {10.48550/ARXIV.2204.03503},
-  keywords  = {Computation and Language (cs.CL), Artificial Intelligence (cs.AI), Machine Learning (cs.LG), FOS: Computer and information sciences},
-  publisher = {arXiv},
-  url       = {https://arxiv.org/abs/2204.03503},
+  keywords = {Artificial Intelligence (cs.AI),Computation and Language (cs.CL),FOS: Computer and information sciences,Machine Learning (cs.LG)}
 }
 
-
-@Misc{Nguyen2022_preprints_conversational-xai,
-  author    = {Nguyen, Van Bach and Schlötterer, Jörg and Seifert, Christin},
-  title     = {Explaining Machine Learning Models in Natural Conversations: Towards a Conversational XAI Agent},
-  year      = {2022},
-  copyright = {Creative Commons Attribution Non Commercial No Derivatives 4.0 International},
-  doi       = {10.48550/ARXIV.2209.02552},
-  keywords  = {Artificial Intelligence (cs.AI), Computation and Language (cs.CL), FOS: Computer and information sciences},
-  publisher = {arXiv},
-  url       = {https://arxiv.org/abs/2209.02552},
+@article{imangaliyevDiagnosisInflammatoryBowel2022,
+  title = {Diagnosis of {{Inflammatory Bowel Disease}} and {{Colorectal Cancer}} through {{Multi-View Stacked Generalization Applied}} on {{Gut Microbiome Data}}},
+  author = {Imangaliyev, Sultan and Schl{\"o}tterer, J{\"o}rg and Meyer, Folker and Seifert, Christin},
+  year = {2022},
+  month = oct,
+  journal = {Diagnostics},
+  volume = {12},
+  number = {10},
+  pages = {2514},
+  issn = {2075-4418},
+  doi = {10.3390/diagnostics12102514},
+  abstract = {Most of the microbiome studies suggest that using ensemble models such as Random Forest results in best predictive power. In this study, we empirically evaluate a more powerful ensemble learning algorithm, multi-view stacked generalization, on pediatric inflammatory bowel disease and adult colorectal cancer patients' cohorts. We aim to check whether stacking would lead to better results compared to using a single best machine learning algorithm. Stacking achieves the best test set Average Precision (AP) on inflammatory bowel disease dataset reaching AP = 0.69, outperforming both the best base classifier (AP = 0.61) and the baseline meta learner built on top of base classifiers (AP = 0.63). On colorectal cancer dataset, the stacked classifier also outperforms (AP = 0.81) both the best base classifier (AP = 0.79) and the baseline meta learner (AP = 0.75). Stacking achieves best predictive performance on test set outperforming the best classifiers on both patient cohorts. Application of the stacking solves the issue of choosing the most appropriate machine learning algorithm by automating the model selection procedure. Clinical application of such a model is not limited to diagnosis task only, but it also can be extended to biomarker selection thanks to feature selection procedure.},
+  langid = {english}
 }
-
-
-@Misc{Nauta2022_preprints_evaluating-xai,
-  author    = {Nauta, Meike and Trienes, Jan and Pathak, Shreyasi and Nguyen, Elisa and Peters, Michelle and Schmitt, Yasmin and Schlötterer, Jörg and van Keulen, Maurice and Seifert, Christin},
-  title     = {From Anecdotal Evidence to Quantitative Evaluation Methods: A Systematic Review on Evaluating Explainable AI},
-  year      = {2022},
-  copyright = {arXiv.org perpetual, non-exclusive license},
-  doi       = {10.48550/ARXIV.2201.08164},
-  keywords  = {Artificial Intelligence (cs.AI), FOS: Computer and information sciences},
-  publisher = {arXiv},
-  url       = {https://arxiv.org/abs/2201.08164},
-}
-
 
 @article{keulenScalableInterdisciplinaryData2020,
   title = {Scalable {{Interdisciplinary Data Science Teaching}} at the {{University}} of {{Twente}}},
@@ -43,7 +31,6 @@
   journal = {Berlin Journal of Data Science},
   volume = {1},
   issn = {978-3-00-064614-0},
-  url = {http://data-science-berlin.de/posts/01/scalable-interdisciplinary-data-science-teaching-at-the-university-of-twente.pdf},
   abstract = {Data scientists are in high demand in many disciplines and domains. This paper describes the data science course open to all master students of the University of Twente. We outline the main challenges of teaching a large and heterogeneous population of non-computer science students about data science and how we addressed them, as well as a historical perspective on how the course grew and evolved.},
   langid = {english}
 }
@@ -97,14 +84,23 @@
   series = {{{IEEE SMC}}}
 }
 
+@misc{Nauta2022_preprints_evaluating-xai,
+  title = {From Anecdotal Evidence to Quantitative Evaluation Methods: {{A}} Systematic Review on Evaluating Explainable {{AI}}},
+  author = {Nauta, Meike and Trienes, Jan and Pathak, Shreyasi and Nguyen, Elisa and Peters, Michelle and Schmitt, Yasmin and Schl{\"o}tterer, J{\"o}rg and {van Keulen}, Maurice and Seifert, Christin},
+  year = {2022},
+  publisher = {{arXiv}},
+  doi = {10.48550/ARXIV.2201.08164},
+  copyright = {arXiv.org perpetual, non-exclusive license},
+  keywords = {Artificial Intelligence (cs.AI),FOS: Computer and information sciences}
+}
+
 @inproceedings{nautaInteractiveExplanationsInternal2020,
   title = {Interactive {{Explanations}} of {{Internal Representations}} of {{Neural Network Layers}}: {{An Exploratory Study}} on {{Outcome Prediction}} of {{Comatose Patients}}},
   booktitle = {International {{Workshop}} on {{Knowledge Discovery}} in {{Healthcare Data}}},
   author = {Nauta, Meike and van Putten, Michel J. A. M. and {Tjepkema-Cloostermans}, Marleen C. and Bos, Jeroen Peter and van Keulen, Maurice and Seifert, Christin},
   year = {2020},
   series = {{{KDH}}},
-  volume = {2675},
-  url = {http://ceur-ws.org/Vol-2675/paper1.pdf}
+  volume = {2675}
 }
 
 @inproceedings{nautaIntrinsicallyInterpretableImage2021,
@@ -126,8 +122,7 @@
   title = {This {{Looks Like That}}, {{Because}} ... {{Explaining Prototypes}} for {{Interpretable Image Recognition}}},
   booktitle = {Proc. {{ECML PKDD International Workshop}} on {{eXplainable Knowledge Discovery}} in {{Data Mining}} ({{XKDD}})},
   author = {Nauta, Meike and Jutte, Annemarie and Provoost, Jesper and Seifert, Christin},
-  year = {2021},
-  url = {https://arxiv.org/abs/2011.02863}
+  year = {2021}
 }
 
 @article{nautaUncoveringCorrectingShortcut2022,
@@ -142,12 +137,21 @@
   abstract = {Machine learning models have been successfully applied for analysis of skin images. However, due to the black box nature of such deep learning models, it is difficult to understand their underlying reasoning. This prevents a human from validating whether the model is right for the right reasons. Spurious correlations and other biases in data can cause a model to base its predictions on such artefacts rather than on the true relevant information. These learned shortcuts can in turn cause incorrect performance estimates and can result in unexpected outcomes when the model is applied in clinical practice. This study presents a method to detect and quantify this shortcut learning in trained classifiers for skin cancer diagnosis, since it is known that dermoscopy images can contain artefacts. Specifically, we train a standard VGG16-based skin cancer classifier on the public ISIC dataset, for which colour calibration charts (elliptical, coloured patches) occur only in benign images and not in malignant ones. Our methodology artificially inserts those patches and uses inpainting to automatically remove patches from images to assess the changes in predictions. We find that our standard classifier partly bases its predictions of benign images on the presence of such a coloured patch. More importantly, by artificially inserting coloured patches into malignant images, we show that shortcut learning results in a significant increase in misdiagnoses, making the classifier unreliable when used in clinical practice. With our results, we, therefore, want to increase awareness of the risks of using black box machine learning models trained on potentially biased datasets. Finally, we present a model-agnostic method to neutralise shortcut learning by removing the bias in the training dataset by exchanging coloured patches with benign skin tissue using image inpainting and re-training the classifier on this de-biased dataset.}
 }
 
-@inproceedings{Nguyben2022_iclr-blog_pplmrevisiteds-mammoth,
+@inproceedings{Nguyen2022_iclr-blog_pplmrevisiteds-mammoth,
   title = {{{PPLM}} Revisited: {{Steering}} and Beaming a Lumbering Mammoth to Control Text Generation},
   booktitle = {{{ICLR}} Blog Track},
   author = {Nguyen, Van Bach and Trienes, Jan and Nauta, Meike and Pathak, Shreyasi and Youssef, Paul and Imangaliyev, Sultan and Schl{\"o}tterer, J{\"o}rg and Seifert, Christin},
+  year = {2022}
+}
+
+@misc{Nguyen2022_preprints_conversational-xai,
+  title = {Explaining Machine Learning Models in Natural Conversations: {{Towards}} a Conversational {{XAI}} Agent},
+  author = {Nguyen, Van Bach and Schl{\"o}tterer, J{\"o}rg and Seifert, Christin},
   year = {2022},
-  url = {https://iclr-blog-track.github.io/2022/03/25/PPLM/}
+  publisher = {{arXiv}},
+  doi = {10.48550/ARXIV.2209.02552},
+  copyright = {Creative Commons Attribution Non Commercial No Derivatives 4.0 International},
+  keywords = {Artificial Intelligence (cs.AI),Computation and Language (cs.CL),FOS: Computer and information sciences}
 }
 
 @inproceedings{nguyenHybridTextClassification2020,
@@ -189,7 +193,8 @@
   pages = {102038},
   issn = {0933-3657},
   doi = {10.1016/j.artmed.2021.102038},
-  keywords = {Deep learning,EEG,EMG signals,EOG,Explainable AI,Post-hoc interpretability,Sleep scoring,Sleep stage annotation}
+  keywords = {Deep learning,EEG,EMG signals,EOG,Explainable AI,Post-hoc interpretability,Sleep scoring,Sleep stage annotation},
+  file = {/Users/andrea/Zotero/storage/ILEJPEMP/Pathak et al. - 2021 - STQS Interpretable multi-modal Spatial-Temporal-s.pdf}
 }
 
 @inproceedings{ruisHumanintheloopLanguageagnosticExtraction2020,
@@ -212,11 +217,18 @@
 }
 
 @inproceedings{schmidtTrustworthySecureReliable2021,
-  title = {Towards a Trustworthy, Secure and Reliable Enclave for Machine Learning in a Hospital Setting: {{The Essen Medical Computing Platform}} ({{EMCP}})},
+  title = {Towards a Trustworthy, Secure and Reliable Enclave for Machine Learning in a Hospital Setting: The {{Essen Medical Computing Platform}} ({{EMCP}})},
   booktitle = {Proc. {{International Conference}} on {{Cognitive Machine Intelligence}}},
   author = {Schmidt, Hendrik and Schl{\"o}tterer, J{\"o}rg and Bargull, Marcell and Nasca, Enrico and Aydelott, Ryan and Seifert, Christin and Meyer, Folker},
   year = {2021},
   publisher = {{IEEE}}
+}
+
+@inproceedings{Trienes2022_tsar_patient-friendly-clinical-notes,
+  title = {Patient-Friendly Clinical Notes: {{Towards}} a New Text Simplification Dataset},
+  booktitle = {Proc. {{EMNLP}} Workshop Hop on Text Simplification, Accessibility, and Readability ({{TSAR}})},
+  author = {Trienes, Jan and Schl{\"o}tterer, J{\"o}rg and Schildhaus, Hans-Ulrich and Seifert, Christin},
+  year = {2022}
 }
 
 @inproceedings{trienesComparingRulebasedFeaturebased2020,
@@ -236,6 +248,22 @@
   issn = {1433-2965},
   doi = {10.1007/s00198-020-05735-z},
   abstract = {Four machine learning models were developed and compared to predict the risk of a future major osteoporotic fracture (MOF), defined as hip, wrist, spine and humerus fractures, in patients with a prior fracture. We developed a user-friendly tool for risk calculation of subsequent MOF in osteopenia patients, using the best performing model.}
+}
+
+@inproceedings{Youssef2022_dmbih_model-personalizaton-patient-data,
+  title = {Model Personalization with Static and Dynamic Patients' Data},
+  booktitle = {Proc. {{ICDM}} Workshop on Data Mining in Biomedical Informatics and Healthcare ({{DMBIH}})},
+  author = {Youssef, Paul and Schl{\"o}tterer, J{\"o}rg and Imangaliyev, Sultan and Seifert, Christin},
+  year = {2022}
+}
+
+@inproceedings{Zerhoudi2022_cikm_simiir20-framework,
+  title = {The {{SimIIR}} 2.0 Framework: {{User}} Types, Markov Model-Based Interaction Simulation, and Advanced Query Generation},
+  booktitle = {31st {{ACM}} International Conference on Information and Knowledge Management ({{CIKM}} 2022)},
+  author = {Zerhoudi, Saber and G{\"u}nther, Sebastian and Plassmeier, Kim and Borst, Timo and Seifert, Christin and Hagen, Matthias and Granitzer, Michael},
+  year = {2022},
+  publisher = {{ACM}},
+  site = {Atlanta, Georgia, USA}
 }
 
 @inproceedings{zerhoudiEvaluatingSimulatedUser2022,
@@ -266,5 +294,4 @@
   year = {2022},
   series = {{{IRCDL}}}
 }
-
 
